--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
         <div class="descrição">
           <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas">
           <h3 class="descrição__titulo">Autora do Mês</h3>
-          <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-          <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.
+          <h2 class="descrição__titulo-livro">Matheus Polis Torino</h2>
+          <p class="descrição__texto">Analista de sistemas e escritora, Matheus é especialista em Front-End.
           </p>
         </div>
         <!-- 2º coluna -->
-        <img src="img/Escritora.svg" class="descrição__imagem">
+        <img src="cadu.jpmg" alt="foto cadu"> class="descrição__imagem">
       </div>
 
       <!-- 2º linha -->
