--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AluraBooks</title>
   <link rel="stylesheet" href="reset.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="banner.css">
+  <link rel="stylesheet" href="carrossel.css">
+  <link rel="stylesheet" href="header.css">
+  <link rel="stylesheet" href="topicos.css">
 </head>
 
 <body>
@@ -141,12 +145,12 @@
         <div class="descrição">
           <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas">
           <h3 class="descrição__titulo">Autora do Mês</h3>
-          <h2 class="descrição__titulo-livro">Matheus Polis Torino</h2>
-          <p class="descrição__texto">Analista de sistemas e escritora, Matheus é especialista em Front-End.
+          <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
+          <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.
           </p>
         </div>
         <!-- 2º coluna -->
-        <img src="cadu.jpmg" alt="foto cadu"> class="descrição__imagem">
+        <img src="img/Escritora.svg" class="descrição__imagem">
       </div>
 
       <!-- 2º linha -->
